--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ nav ul li a:hover {
     text-align: left;
     /* 文字靠左 */
     margin: 0 auto;
-    /* 如果要整個 ul 仍然在區塊中置中 */
+    /* 讓整個 ul 仍然在區塊中置中 */
     padding-left: 1.2em;
     /* 適度縮排 */
 }
@@ -231,8 +231,11 @@ nav ul li a:hover {
 .products {
     display: flex;
     /* 使用彈性盒模型 */
-    width: 950px;
+    justify-content: center;
+    /* 讓內容水平置中 */
+    max-width: 840px;
     /* 設定寬度 */
+    width: 100%;
     font-size: 18px;
     /* 字體大小 */
     margin: 0 auto;
@@ -240,34 +243,40 @@ nav ul li a:hover {
 }
 
 .products img {
-    width: 550px;
-    /* 圖片寬度 */
+    width: 100%;
+    /* 撐滿 product-item */
+    max-width: 350px;
+    /* 不超過350 */
     height: 350px;
-    /* 圖片高度 */
-    margin: 10px 50px;
-    /* 上下10px，左右50px的外邊距 */
+    margin: 20px auto;
+    /* 置中 */
     object-fit: cover;
-    /* 保持比例並裁切溢出 */
     border-radius: 30px;
-    /* 圓角邊框 */
+    display: block;
+    /* 修正圖片默認的 inline 對齊縫隙 */
 }
 
 .products .product-item {
-    width: 350px;
-    /* 產品列表寬度 */
-    height: 350px;
-    /* 產品列表高度 */
-    padding: 30px 30px;
-    /* 上下30px，左右30px的內邊距 */
-    margin: 0 25px;
-    /* 左右25px的外邊距 */
-    overflow-y: auto;
-    /* 允許垂直滾動 */
+    max-width: 380px;
+    width: 100%;
+    height: auto;
+    /* 不要固定高度，讓文字自由撐開 */
+    margin: 30px 10px;
+    /* 統一外邊距 */
+    padding: 10px;
+    box-sizing: border-box;
+    /* 避免 padding 撐大區塊 */
 }
 
 .product-item ul li {
     list-style-position: inside;
     /* 讓圓點在文字裡側，不額外多縮一格 */
+    text-align: left;
+    /* 文字靠左 */
+    margin: 0 auto;
+    /* 讓整個 ul 仍然在區塊中置中 */
+    padding-left: 2px;
+    /* 適度縮排 */
 }
 
 #menu {
@@ -279,16 +288,17 @@ nav ul li a:hover {
     /* 水平置中 */
     justify-content: center;
     /* 垂直置中 */
+    margin-top: 30px;
 }
 
 .menu-image {
-    width: 85%;
+    width: 80%;
     /* 每張圖片都自適應螢幕 */
     height: auto;
     margin: 0px auto;
     border-radius: 30px;
     /* 圓角邊框 */
-    box-shadow: 0px 0px 8px 3px #473b3b;
+    box-shadow: 0px 0px 6px 3px #473b3b;
     /* 添加陰影效果 */
 }
 
