--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,11 @@ h3 {
     /* 副標題顏色 */
 }
 
+h4 {
+    font-size: 24px;
+    color: #451a03;
+}
+
 .hamburger {
     width: 40px;
     height: 40px;
